--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "date-fns": "^1.30.1",
     "navi": "^0.13.3",
     "ramda": "^0.26.1",
     "react": "^16.8.6",
@@ -12,6 +13,8 @@
     "react-pose": "^4.0.8",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2",
+    "styled-reset": "^3.0.0",
+    "tachyons-components": "^1.0.1",
     "web3": "^1.2.0"
   },
   "scripts": {
