--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "after-build": "echo \"/*    /index.html   200\" > build/_redirects",
+    "build": "react-scripts build && npm run after-build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "flow": "flow"
